--- a/resources/sass/_frames.sass
+++ b/resources/sass/_frames.sass
@@ -38,10 +38,14 @@
 	filter: drop-shadow(10px 10px 10px black) drop-shadow(0 15px 15px $gold)
 	height: auto
 	margin: auto
-	max-height: 80vw
+	width: fit-content
 
-	& img
-		width: 100%
+	a
+		display: flex
+		width: fit-content
+		height: fit-content
+
+	img
+		max-height: 80vh
 		height: auto
-		display: block
-		min-width: 200px
+		max-width: 100%
